<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUpActivity">

    <ScrollView
    android:layout_width="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editText_signup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_right"
        android:inputType="text"
        android:hint="@string/hint_name" />

    <EditText
        android:id="@+id/editText_signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_signup_name"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_right"
        android:inputType="textEmailAddress"

        android:hint="@string/hint_email" />

    <EditText
        android:id="@+id/editText_signup_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_signup_email"
        android:inputType="phone"
        android:maxLength="10"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_right"
        android:hint="@string/hint_phone" />

    <EditText
        android:id="@+id/editText_signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@id/editText_signup_phone"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_right"
        android:hint="@string/hint_password" />

    <EditText
        android:id="@+id/editText_signup_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@id/editText_signup_password"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_right"
        android:hint="@string/hint_confirm_password" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_signup_confirmpassword"
        android:layout_centerHorizontal="true"
        android:background="#8526"
        android:padding="10dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_top"
        android:hint="@string/text_signup" />
    <TextView
        android:id="@+id/text_already_signn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/already_member"
        android:textSize="@dimen/text_size"
        android:layout_below="@id/btn_signup"
        android:layout_centerHorizontal="true"
        android:background="#1111"
        android:layout_marginTop="@dimen/margin_top"/>
    </RelativeLayout>
</ScrollView>

</RelativeLayout>
