<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.UpdateActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/editstudent_photo"
                android:src="@drawable/imagee_add"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="60dp"
                android:layout_height="60dp" />

            <Button
                android:id="@+id/editbtn_upload_image"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_below="@id/editstudent_photo"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:padding="1dp"
                android:text="@string/upload" />


            <EditText
                android:id="@+id/edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editbtn_upload_image"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginRight="@dimen/margin_right"
                android:inputType="text"
                android:hint="@string/first_name" />
            <EditText
                android:id="@+id/edit_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_first_name"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginRight="@dimen/margin_right"
                android:inputType="text"
                android:hint="@string/last_name" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_last_name"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginRight="@dimen/margin_right"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_email"
                android:inputType="phone"
                android:maxLength="10"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginRight="@dimen/margin_right"
                android:hint="@string/hint_phone" />
            <EditText
                android:id="@+id/edit_update_platform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_phone"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginRight="@dimen/margin_right"
                android:hint="@string/current_platform" />
            <TextView
                android:id="@+id/tv_update_deparement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_below="@id/edit_update_platform"
                android:text="@string/hint_designation"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_update_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tv_update_deparement"
                android:layout_marginLeft="120dp"
                android:layout_below="@id/edit_phone"
                android:hint="@string/hint_designation" />
            <TextView
                android:id="@+id/tv_update_experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_below="@id/tv_update_deparement"
                android:text="@string/hint_experience"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_update_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tv_update_experience"
                android:layout_marginLeft="120dp"
                android:layout_below="@id/et_update_department"
                android:hint="@string/hint_experience" />


            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_update_experience"
                android:layout_centerHorizontal="true"
                android:background="#8526"
                android:padding="10dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:hint="@string/update" />
            <View
                android:id="@+id/view"
                android:layout_below="@id/btn_update"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginTop="@dimen/margin_top" />
            <Button
                android:id="@+id/btn_add_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view"
                android:layout_centerHorizontal="true"
                android:background="#8526"
                android:padding="10dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:hint="@string/add_note" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>